feat: proper Ralph loops with fresh sessions per iteration
Implements Geoffrey Huntley's original Ralph vision:
- Progress persists, failures evaporate
- Fresh Claude session per iteration (not same-session Enter)
- State files in .ralph/ directory (anchor.md, guardrails.md, progress.md)
- Kill pane + respawn on Stop events
- Circuit breakers: stop word detection, max iterations, stall detection

Removes dependency on Anthropic's Ralph plugin which had context rot issues.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-appender = "0.2"
 
 # Utilities
+chrono = { version = "0.4", features = ["serde"] }
 directories = "5"
 ignore = "0.4"          # Git-aware directory walking (from ripgrep)
 notify-rust = "4"       # Cross-platform native desktop notifications
