chore: remove unused code and update contribution guidelines
- Remove 1,420 lines of unused code across 18 files
- Simplify sprite controller, forwarder, and config modules
- Remove unused git worktree management methods (kept core checkpoint/push)
- Remove unused tmux detection and pane management methods
- Clean up unused state machine methods and tests
- Simplify error types and event structs
- Add CI jobs for MSRV and documentation checks
- Update CONTRIBUTING.md with branch naming, versioning, and release docs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   CARGO_INCREMENTAL: 0  # Faster builds, better caching
+  MSRV: "1.70"
 
 jobs:
   # Fast checks - run first to fail fast
@@ -29,6 +30,23 @@ jobs:
       - name: Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
 
+  # Minimum Supported Rust Version check
+  msrv:
+    name: MSRV (Rust ${{ matrix.rust }})
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    strategy:
+      matrix:
+        rust: ["1.70"]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ matrix.rust }}
+      - uses: Swatinem/rust-cache@v2
+      - name: Check MSRV compatibility
+        run: cargo check --all-features
+
   # Security audit
   audit:
     name: Security Audit
@@ -39,6 +57,20 @@ jobs:
       - uses: rustsec/audit-check@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+  # Documentation build check
+  docs:
+    name: Documentation
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+      - name: Build documentation
+        run: cargo doc --no-deps --all-features
+        env:
+          RUSTDOCFLAGS: -D warnings
 
   test:
     name: Test
