--- a/deny.toml
+++ b/deny.toml
@@ -5,10 +5,9 @@
 version = 2
 db-path = "~/.cargo/advisory-db"
 db-urls = ["https://github.com/rustsec/advisory-db"]
-vulnerability = "deny"
-unmaintained = "warn"
 yanked = "warn"
-notice = "warn"
+# Check unmaintained crates in workspace only (not transitive deps)
+unmaintained = "workspace"
 
 [licenses]
 version = 2
