fix: add CDLA-Permissive-2.0 license to deny.toml

--- a/deny.toml
+++ b/deny.toml
@@ -21,8 +21,8 @@ allow = [
     "ISC",
     "Zlib",
     "Unicode-3.0",
-    "Unicode-DFS-2016",
     "MPL-2.0",
+    "CDLA-Permissive-2.0",  # webpki-roots (root certificates)
 ]
 
 [bans]
