--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -16,6 +16,6 @@ tap = "m-mohamed/homebrew-rehoboam"
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
 # Include shell completions
-include = ["completions/*"]
+include = ["completions/rehoboam.bash", "completions/_rehoboam", "completions/rehoboam.fish"]
 # Publish jobs to run
 publish-jobs = ["homebrew"]
