--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -276,7 +276,13 @@ jobs:
           # Write and read notes from a file to avoid quoting breaking things
           echo "$ANNOUNCEMENT_BODY" > $RUNNER_TEMP/notes.txt
 
-          gh release create "${{ needs.plan.outputs.tag }}" --target "$RELEASE_COMMIT" $PRERELEASE_FLAG --title "$ANNOUNCEMENT_TITLE" --notes-file "$RUNNER_TEMP/notes.txt" artifacts/*
+          # Check if release already exists (dist may have created it)
+          if gh release view "${{ needs.plan.outputs.tag }}" > /dev/null 2>&1; then
+            echo "Release ${{ needs.plan.outputs.tag }} already exists, uploading artifacts only"
+            gh release upload "${{ needs.plan.outputs.tag }}" artifacts/* --clobber || true
+          else
+            gh release create "${{ needs.plan.outputs.tag }}" --target "$RELEASE_COMMIT" $PRERELEASE_FLAG --title "$ANNOUNCEMENT_TITLE" --notes-file "$RUNNER_TEMP/notes.txt" artifacts/*
+          fi
 
   publish-homebrew-formula:
     needs:
