--- a/release-plz.toml
+++ b/release-plz.toml
@@ -20,7 +20,7 @@ changelog_config = "cliff.toml"
 
 # Only these commit types trigger releases
 # Excludes: ci, chore, docs, test, style
-release_commits_regexp = "^(feat|fix|perf|refactor)(\\([^)]+\\))?!?:"
+release_commits = "^(feat|fix|perf|refactor)"
 
 # PR settings
 pr_draft = false
