--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,11 @@ name: CI
 on:
   push:
     branches: [main]
-    tags: ['v*']
   pull_request:
 
 env:
   CARGO_TERM_COLOR: always
-  CARGO_INCREMENTAL: 0  # Faster builds, better caching
+  CARGO_INCREMENTAL: 0
 
 jobs:
   # Fast checks - run first to fail fast
@@ -75,71 +74,3 @@ jobs:
           save-if: ${{ github.ref == 'refs/heads/main' }}
       - name: Run tests
         run: cargo test --all-features
-
-  build:
-    name: Build (${{ matrix.target }})
-    needs: [check]  # Only build if checks pass
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 20
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-            artifact: rehoboam-linux-x86_64
-          - os: ubuntu-24.04-arm
-            target: aarch64-unknown-linux-gnu
-            artifact: rehoboam-linux-aarch64
-          - os: macos-latest
-            target: x86_64-apple-darwin
-            artifact: rehoboam-macos-x86_64
-          - os: macos-latest
-            target: aarch64-apple-darwin
-            artifact: rehoboam-macos-aarch64
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-      - uses: Swatinem/rust-cache@v2
-        with:
-          key: ${{ matrix.target }}
-          save-if: ${{ github.ref == 'refs/heads/main' }}
-      - name: Build release binary
-        run: cargo build --release --target ${{ matrix.target }}
-      - uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.artifact }}
-          path: target/${{ matrix.target }}/release/rehoboam
-          if-no-files-found: error
-
-  release:
-    name: Release
-    needs: [test, build]
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-      - name: Rename artifacts for release
-        run: |
-          cd artifacts
-          for dir in */; do
-            name="${dir%/}"
-            # Extract binary, remove dir, rename to platform name
-            mv "$dir/rehoboam" "${name}.tmp"
-            rm -rf "$dir"
-            mv "${name}.tmp" "${name}"
-          done
-          ls -la
-      - name: Create GitHub release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: artifacts/*
-          generate_release_notes: true
-          fail_on_unmatched_files: true
