feat: add OTEL integration and hook enhancements
Phase 1: Hook Enhancements
- Add remaining_percentage field to ContextWindow (Claude Code 2.1.6+)
- Implement permissionDecision return for loop mode with policy system
- Add .rehoboam/policy.toml for auto-approve patterns (read-only tools, bash allow/deny)
- Add approval memory with TTL in approvals.json
- Support step-up approval for operations outside project directory

Phase 2: OTEL Foundation
- Add opentelemetry, opentelemetry_sdk, opentelemetry-otlp dependencies
- Create src/telemetry.rs with TelemetryConfig, otel_layer, trace context extraction
- Add metrics submodule with atomic counters for tool calls, iterations, latencies
- Add --otel-endpoint CLI flag for OTLP export configuration

Phase 3: Distributed Tracing for Sprites
- Add trace_context field to RemoteHookEvent and SpriteWorker
- Instrument WebSocket connection handlers with spans
- Add per-event spans with tool/hook metadata for correlation

Phase 4: OTEL Visualization in TUI
- Add Fleet Metrics (OTEL) section to dashboard
- Show tool calls, average latency, traced iterations, connected sprites
- Record metrics on PreToolUse, PostToolUse, and loop completion

Phase 5: Loop Mode OTEL Integration
- Add loop_session_init span on directory initialization
- Add loop_iteration span per iteration with role and counter metadata

All 84 tests pass, clippy clean.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,13 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-appender = "0.2"
 
+# OpenTelemetry (distributed tracing for agent fleet)
+opentelemetry = { version = "0.21", features = ["trace"] }
+opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
+opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
+tracing-opentelemetry = "0.22"
+url = "2"  # URL parsing for OTEL endpoint validation
+
 # Utilities
 chrono = { version = "0.4", features = ["serde"] }
 directories = "6"
