--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -39,6 +39,10 @@ jobs:
   release-plz-release:
     name: Release
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'chore: release')
+    concurrency:
+      group: release-publish
+      cancel-in-progress: false
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
