--- a/.github/workflows/release-plz.yml
+++ b/.github/workflows/release-plz.yml
@@ -40,7 +40,7 @@ jobs:
   release-plz-release:
     name: Release
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'chore: release')
+    if: "contains(github.event.head_commit.message, 'chore: release')"
     concurrency:
       group: release-publish
       cancel-in-progress: false
