--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ url = "2"  # URL parsing for OTEL endpoint validation
 
 # Utilities
 chrono = { version = "0.4", features = ["serde"] }
+once_cell = "1.19"              # Lazy static initialization
 directories = "6"
 ignore = "0.4"          # Git-aware directory walking (from ripgrep)
 notify-rust = "4"       # Cross-platform native desktop notifications
