--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ ignore = "0.4"          # Git-aware directory walking (from ripgrep)
 notify-rust = "4"       # Cross-platform native desktop notifications
 socket2 = "0.6"         # Socket buffer tuning
 nucleo-picker = { version = "0.11", optional = true }  # Built-in fuzzy picker
+tui-markdown = { version = "0.3", features = ["highlight-code"] }  # Markdown rendering
 tokio-util = "0.7"  # CancellationToken for graceful shutdown
 
 # Sprites - remote sandbox execution
